charts/controtto/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: controtto-oidc
spec:
  plugin:
    traefik-oidc-auth:
      Provider:
        ClientId: urn:k8s:secret:controtto-oidc:client-id
        ClientSecret: urn:k8s:secret:controtto-oidc:client-secret
        TokenValidation: IdToken
        Url: https://login.int.imdevinc.com
      Scopes:
      - openid
      - profile
      - email
      Secret: PMYZT3D2J4da20RsSIMMZaArKI6d3pxt
