charts/controtto/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: controtto
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Finance
    gethomepage.dev/icon: bitcoin.png
    gethomepage.dev/name: Controtto
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: traefik
  hostnames:
  - controtto.int.imdevinc.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: controtto
      namespace: controtto
      port: 8000
    filters:
      - extensionRef:
          group: traefik.io
          kind: Middleware
          name: controtto-oidc
        type: ExtensionRef
